--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,9 @@ anyhow = "1.0.79"
 aoc-next = "0.1.0"
 counter = "0.6.0"
 itertools = "0.13.0"
+num = "0.4.3"
 regex = "1.11.1"
+rustc-hash = "2.1.0"
 
 [dev-dependencies]
 indoc = "2.0.4"
