--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.94"
 aoc-next = "0.1.0"
 counter = "0.6.0"
+indexmap = "2.7.0"
 itertools = "0.13.0"
 num = "0.4.3"
 regex = "1.11.1"
