--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ itertools = "0.13.0"
 num = "0.4.3"
 regex = "1.11.1"
 rustc-hash = "2.1.0"
+winnow = "0.6.20"
 
 [dev-dependencies]
 indoc = "2.0.4"
