--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ counter = "0.6.0"
 indexmap = "2.7.0"
 itertools = "0.13.0"
 num = "0.4.3"
+pathfinding = "4.12.0"
 regex = "1.11.1"
 rustc-hash = "2.1.0"
 winnow = "0.6.20"
