--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ aoc-next = "0.1.0"
 counter = "0.6.0"
 indexmap = "2.7.0"
 itertools = "0.13.0"
+memoize = "0.4.2"
 num = "0.4.3"
 pathfinding = "4.12.0"
 regex = "1.11.1"
